<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login.ui.LoginActivity">

    <TextView
        android:id="@+id/idTitleApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/app_title_form_users"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTitleApp"
        android:background="@color/purple_ligth"
        android:layout_marginTop="60dp"
        android:padding="20dp"
        android:hint="@string/hint_username"
        android:textColorHint="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/outline_account_box_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputUserName"
        android:background="@color/purple_ligth"
        android:layout_marginTop="35dp"
        android:padding="20dp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/outline_cinematic_blur_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPassword"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/blue_ligth"
        android:text="@string/text_button_back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAccept"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/buttonBack"
        android:backgroundTint="@color/blue_ligth"
        android:text="@string/text_button" />


</RelativeLayout>